src/test/ui/issues/issue-21974.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-21974.rs:10:1
   |
LL |   trait Foo {
   |   --------- required by `Foo`
...
LL | / fn foo<'a,'b,T>(x: &'a T, y: &'b T)
LL | |     where &'a T : Foo,
LL | |           &'b T : Foo
LL | | {
LL | |     x.foo();
LL | |     y.foo();
LL | | }
   | |_^ cannot infer type for reference `&'a T`
   |
   = note: cannot resolve `&'a T: Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
